   Version 0.35

-----------------------------------------------------------------------
 Version 0.54
 ============

 Released on 
  
 New features and improvements:

   New formula engine.

   - DDL Core v 30
   - myIDialog: provides  a default error message.
   - myIWindow: improve size and position management (todo #1054).
   - myThousandCombo: new class for thousand separator selection.
   - ofaMainWindow: may display an image on a per-dossier basis (todo #669).
   - ofaMysql: implements ofaIAbout interface.
   - ofaMysql: implements ofaIProperties interface.
   - ofaExportAssistant: makes use of ofaStreamformatDisp (todo #1057).
   - ofaIDBModel, ofaCheckIntegrityBin, ofaImportAssistant: scroll textview when adding text (todo #1056).
   - ofaImport: save table before insertion, restoring it on error (todo #1061).
   - ofaPluginManager: displays instanciated objects (todo #1066).
   - ofaPluginManager: displays About page (todo #1066).
   - ofaPluginManager: displays Properties page (todo #1066).
   - ofaStreamFormat: remove 'has headers' indicator.
   - ofaStreamFormatBin: homogeneize character display (todo #1063).
   - ofaStreamFormatDisp: homogeneize character display (todo #1064).
   - ofoRecurrentModel: is exportable (todo #1048).
   - ofoRecurrentModel: is importable (todo #1049).
 
 Bug fixes:

   - my_isettings_free_string_list(), ofa_settings_free_string_list(): be NULL-tolerant.
   - my_utils_uri_get_lines(): get rid of all empty lines at end of file.
   - ofaPreferences: plugins no more prevent the dialog closing.
   - ofaStreamFormatBin: if has string delimiter, then it must not be empty.

 Other changes:

   - myAccelGroup: new GtkAccelGroup extension class.
   - myIActionMap: new GActionMap extension interface.
   - my_utils_window_position_get_has_pos(): new function.
   - ofaFormulaEngine: new class (todo #1010).
   - ofa_hub_disconnect_handlers: improve and generalize use (todo #1055).