@@ -163,8 +163,6 @@ static ofaIThemeManager     *igetter_get_theme_manager( const ofaIGetter *instan
 static void                  iaction_map_iface_init( myIActionMapInterface *iface );
 static GMenuModel           *iaction_map_get_menu_model( const myIActionMap *instance );
 static const gchar          *iaction_map_get_action_target( const myIActionMap *instance );
-static guint                 iaction_map_get_action_count( const myIActionMap *instance );
-static const GActionEntry   *iaction_map_get_action_entries( const myIActionMap *instance );
 
 G_DEFINE_TYPE_EXTENDED( ofaApplication, ofa_application, GTK_TYPE_APPLICATION, 0,
 		G_ADD_PRIVATE( ofaApplication )
@@ -1240,8 +1238,6 @@ iaction_map_iface_init( myIActionMapInterface *iface )
 
 	iface->get_menu_model = iaction_map_get_menu_model;
 	iface->get_action_target = iaction_map_get_action_target;
-	iface->get_action_count = iaction_map_get_action_count;
-	iface->get_action_entries = iaction_map_get_action_entries;
 }
 
 static GMenuModel *
@@ -1258,16 +1254,4 @@ static const gchar *
 iaction_map_get_action_target( const myIActionMap *instance )
 {
 	return( "app" );
-}
-
-static guint
-iaction_map_get_action_count( const myIActionMap *instance )
-{
-	return( G_N_ELEMENTS( st_app_entries ));
-}
-
-static const GActionEntry *
-iaction_map_get_action_entries( const myIActionMap *instance )
-{
-	return( st_app_entries );
 }
